--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
     </div>
     <div class="section" id="info">
       <h1>About Me</h1>
-      <p>I am a novice fullstack developer passionate about AI/Machine Learning, Software Development, Web Design, Cyber Security and engineering. Major libraries and services I have previously worked with are AWS, Node.js, and React.js. Languages I have programmed in are Java, JavaScript, Python, and Ruby.</p>
+      <p>I am a high school student passionate about Aerospace Engineering, AI/Machine Learning, Software Development, Web Design, and Cyber Security. Major libraries and services I have previously worked with are AWS, Node.js, and React.js. Languages I have programmed in are Java, JavaScript, Python, Arduino IDE, and Ruby. CAD software I have worked with in the past include Fusion 360 and Solidworks. I have experience with additive manufacturing and pcb board design(planning/soldering).</p>
 
-      <h1>Other Interests</h1>
+<!--       <h1>Other Interests</h1>
       <ul>
         <li>AI/Machine Learning</li>
         <li>Software Development</li>
         <li>Web Design</li>
         <li>Cyber Security</li>
         <li>Engineering</li>
-      </ul>
+      </ul> -->
       <h1>Projects</h1>
       <ul>
         <li><a href="http://exemplar-env-2.eba-pnmjai29.us-east-2.elasticbeanstalk.com/" target="_blank">Exemplar</a></li>
