updated intro and links

--- a/index.html
+++ b/index.html
@@ -15,17 +15,18 @@
     <nav id="connect">
       <a href="https://github.com/teakyung25">GitHub</a>
       <a href="https://www.linkedin.com/in/taekyung-kim-9107811a8">Linkedin</a>
+      <a href="https://app.tallo.com/profile/1478145?accessCode=5czpu6IzDdff2iViD0uN8M5M4hQGK9YFBssqc69THhw">Tallo</a>
     </nav>
     <div class="section" id="intro">
       <div class="center">
         <h1 id="title">Hi. I'm Taekyung Kim</h1>
-        <h3 id="message">Full Stack Developer and STEM Enthusiast</h3>
+        <h3 id="message">Code Ninjas Tutor. Student For Life.</h3>
       </div>
       <i class="material-icons" id="arrow">keyboard_arrow_down</i>
     </div>
     <div class="section" id="info">
       <h1>About Me</h1>
-      <p>I am a high school student passionate about Aerospace Engineering, AI/Machine Learning, Software Development, Web Design, and Cyber Security. Major libraries and services I have previously worked with are AWS, Node.js, and React.js. Languages I have programmed in are Java, JavaScript, Python, Arduino IDE, and Ruby. CAD software I have worked with in the past include Fusion 360 and Solidworks. I have experience with additive manufacturing and pcb board design(planning/soldering).</p>
+      <p>I am a high school student passionate about Aerospace Engineering, Mechanical Engineering, AI/Machine Learning, and Software Development. Major libraries and services I have previously worked with are AWS, Node.js, and React.js. Languages I have programmed in are Java, JavaScript, Python, Arduino IDE C++, Ruby, and MATLAB. CAD software I have worked with in the past include Fusion 360, Solidworks, and Creo. I have experience with additive manufacturing and pcb board design(planning/soldering).</p>
 
 <!--       <h1>Other Interests</h1>
       <ul>
@@ -40,7 +41,7 @@
         <li><a href="http://exemplar-env-2.eba-pnmjai29.us-east-2.elasticbeanstalk.com/" target="_blank">Exemplar</a></li>
         <li><a href="https://jake-coding.github.io/covid-hospital-map/" target="_blank">COVID-19 Hospital Map</a></li>
         <li><a href="https://github.com/grt812/todolist2" target="_blank">Todo-List 2</a></li>
-        <li><a href="https://taettkee.github.io/shuffletube.github.io" target="_blank">ShuffleTube</a></li>
+        <li><a>SECTION UNDER CONSTRUCTION</a></li>
       </ul>
     </div>
   </body>
