--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </nav>
     <div class="section" id="intro">
       <div class="center">
-        <h1 id="title">Hi. I'm Taekyung Kim</h1>
+        <h1 id="title">Hi, I'm Taekyung Kim</h1>
         <h3 id="message">Code Ninjas Tutor. Student For Life.</h3>
       </div>
       <i class="material-icons" id="arrow">keyboard_arrow_down</i>
