--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav id="connect">
       <a href="https://github.com/teakyung25">GitHub</a>
       <a href="https://www.linkedin.com/in/taekyung-kim-9107811a8">Linkedin</a>
-      <a href="https://app.tallo.com/profile/1478145?accessCode=5czpu6IzDdff2iViD0uN8M5M4hQGK9YFBssqc69THhw">Tallo</a>
+     <!--    <a href="https://app.tallo.com/profile/1478145?accessCode=5czpu6IzDdff2iViD0uN8M5M4hQGK9YFBssqc69THhw">Tallo</a> -->
     </nav>
     <div class="section" id="intro">
       <div class="center">
