--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <div class="section" id="intro">
       <div class="center">
         <h1 id="title">Hi, I'm Taekyung Kim</h1>
-        <h3 id="message">Code Ninjas Tutor. Student For Life.</h3>
+        <h3 id="message">Aerospace Engineering Undergraduate Student</h3>
       </div>
       <i class="material-icons" id="arrow">keyboard_arrow_down</i>
     </div>
     <div class="section" id="info">
       <h1>About Me</h1>
-      <p>I am a high school student passionate about Aerospace Engineering, Mechanical Engineering, AI/Machine Learning, and Software Development. Major libraries and services I have previously worked with are AWS, Node.js, and React.js. Languages I have programmed in are Java, JavaScript, Python, Arduino IDE C++, Ruby, and MATLAB. CAD software I have worked with in the past include Fusion 360, Solidworks, and Creo. I have experience with additive manufacturing and pcb board design(planning/soldering).</p>
+      <p>I am an undergraduate student passionate about Aerospace Engineering and Computer Science. Major libraries and services I have previously worked with are AWS, Node.js, and React.js. Languages I have programmed in are Java, JavaScript, Python, Arduino IDE C++, Ruby, and MATLAB. CAD software I have worked with in the past include Fusion 360, Solidworks, and Creo. In simulations, I have used FLOW-3D to run Computational Fluid Dynamics simulations. I have experience with additive manufacturing and PCB board design(planning/soldering).</p>
 
 <!--       <h1>Other Interests</h1>
       <ul>
